src/test/ui/issue-40510-3.stderr
error: compilation successful
  --> $DIR/issue-40510-3.rs:25:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

